--- a/Core/packages.config
+++ b/Core/packages.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework.Core" version="7.0.0-rc1-final" targetFramework="net451" />
+  <package id="EntityFramework.Relational" version="7.0.0-rc1-final" targetFramework="net451" />
   <package id="Ix-Async" version="1.2.5" targetFramework="net451" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0" targetFramework="net451" />
-  <package id="Microsoft.CodeAnalysis.Common" version="1.1.0-beta1-20150928-02" targetFramework="net451" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="1.1.0-beta1-20150928-02" targetFramework="net451" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net451" />
+  <package id="Microsoft.CodeAnalysis.Common" version="1.2.0-rc" targetFramework="net451" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="1.2.0-rc" targetFramework="net451" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="1.0.0-rc1-final" targetFramework="net451" />
   <package id="Microsoft.Extensions.Caching.Memory" version="1.0.0-rc1-final" targetFramework="net451" />
   <package id="Microsoft.Extensions.Configuration" version="1.0.0-rc1-final" targetFramework="net451" />
@@ -16,23 +17,25 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="1.0.0-rc1-final" targetFramework="net451" />
   <package id="Microsoft.Extensions.OptionsModel" version="1.0.0-rc1-final" targetFramework="net451" />
   <package id="Microsoft.Extensions.Primitives" version="1.0.0-rc1-final" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
-  <package id="Remotion.Linq" version="2.0.1" targetFramework="net451" />
-  <package id="System.Collections" version="4.0.0" targetFramework="net451" />
-  <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net451" />
-  <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net451" />
-  <package id="System.Globalization" version="4.0.0" targetFramework="net451" />
-  <package id="System.IO" version="4.0.0" targetFramework="net451" />
-  <package id="System.Linq" version="4.0.0" targetFramework="net451" />
-  <package id="System.Reflection" version="4.0.0" targetFramework="net451" />
-  <package id="System.Reflection.Extensions" version="4.0.0" targetFramework="net451" />
-  <package id="System.Reflection.Metadata" version="1.1.0" targetFramework="net451" />
-  <package id="System.Reflection.Primitives" version="4.0.0" targetFramework="net451" />
-  <package id="System.Resources.ResourceManager" version="4.0.0" targetFramework="net451" />
-  <package id="System.Runtime" version="4.0.0" targetFramework="net451" />
-  <package id="System.Runtime.Extensions" version="4.0.0" targetFramework="net451" />
-  <package id="System.Runtime.InteropServices" version="4.0.0" targetFramework="net451" />
-  <package id="System.Text.Encoding" version="4.0.0" targetFramework="net451" />
-  <package id="System.Text.Encoding.Extensions" version="4.0.0" targetFramework="net451" />
-  <package id="System.Threading" version="4.0.0" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net451" />
+  <package id="Remotion.Linq" version="2.0.2" targetFramework="net451" />
+  <package id="System.Collections" version="4.0.11-beta-23516" targetFramework="net451" />
+  <package id="System.Collections.Immutable" version="1.1.38-beta-23516" targetFramework="net451" />
+  <package id="System.Diagnostics.Debug" version="4.0.11-beta-23516" targetFramework="net451" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.0.0-beta-23516" targetFramework="net451" />
+  <package id="System.Diagnostics.Tracing" version="4.0.21-beta-23516" targetFramework="net451" />
+  <package id="System.Globalization" version="4.0.11-beta-23516" targetFramework="net451" />
+  <package id="System.IO" version="4.0.11-beta-23516" targetFramework="net451" />
+  <package id="System.Linq" version="4.0.1-beta-23516" targetFramework="net451" />
+  <package id="System.Reflection" version="4.1.0-beta-23516" targetFramework="net451" />
+  <package id="System.Reflection.Extensions" version="4.0.1-beta-23516" targetFramework="net451" />
+  <package id="System.Reflection.Metadata" version="1.2.0" targetFramework="net451" />
+  <package id="System.Reflection.Primitives" version="4.0.1-beta-23516" targetFramework="net451" />
+  <package id="System.Resources.ResourceManager" version="4.0.1-beta-23516" targetFramework="net451" />
+  <package id="System.Runtime" version="4.0.21-beta-23516" targetFramework="net451" />
+  <package id="System.Runtime.Extensions" version="4.0.11-beta-23516" targetFramework="net451" />
+  <package id="System.Runtime.InteropServices" version="4.0.21-beta-23516" targetFramework="net451" />
+  <package id="System.Text.Encoding" version="4.0.11-beta-23516" targetFramework="net451" />
+  <package id="System.Text.Encoding.Extensions" version="4.0.11-beta-23516" targetFramework="net451" />
+  <package id="System.Threading" version="4.0.11-beta-23516" targetFramework="net451" />
 </packages>
