Configure the DB from the config file

--- a/TDSM-Patcher/additional.config
+++ b/TDSM-Patcher/additional.config
@@ -155,3 +155,16 @@ copy-backups=true
 # Specifies how many of the latest log files to keep.
 # [Disabling: 0] Default: 5
 logs-to-keep=5
+
+#================================================================
+#		Data management
+#================================================================
+
+# Allows you to specify what database provider to use.
+# Values: sqlite, postgres, sqlserver
+database-provider=sqlite
+
+# Specify the database connection to be used by the provider.
+# Sqlite example: Data Source=database.sqlite
+# MS SQL example: Server=.\\SQLEXPRESS;Database=ota;Trusted_Connection=True;
+database-connection=Data Source=database.sqlite
