--- a/Core/packages.config
+++ b/Core/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework.Core" version="7.0.0-rc1-final" targetFramework="net451" />
-  <package id="EntityFramework.Relational" version="7.0.0-rc1-final" targetFramework="net451" />
+  <package id="Dapper" version="1.50.0-beta8" targetFramework="net451" />
+  <package id="Dapper.Contrib" version="1.50.0-beta8" targetFramework="net451" />
+  <package id="FluentMigrator" version="1.6.1" targetFramework="net451" />
   <package id="Ix-Async" version="1.2.5" targetFramework="net451" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net451" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.2.0-rc" targetFramework="net451" />
