--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -170,7 +170,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\Models\Migrations\CreateAndSeed\LoadoutItemMigration.cs" />
-    <Compile Include="Data\Models\Migrations\CreateAndSeed\PlayerMigration.cs" />
+    <Compile Include="Data\Models\Migrations\CreateAndSeed\DbPlayerMigration.cs" />
     <Compile Include="Data\Models\Migrations\CreateAndSeed\GroupMigration.cs" />
     <Compile Include="Data\Models\Migrations\CreateAndSeed\SlotItemMigration.cs" />
     <Compile Include="Data\Models\Migrations\CreateAndSeed\CharacterMigration.cs" />
