Mysql/MariaDB now works

--- a/Binaries/server.config
+++ b/Binaries/server.config
@@ -233,10 +233,11 @@ logs-to-keep=5
 #================================================================
 
 # Allows you to specify what database provider to use.
-# Values: sqlite, postgres, sqlserver
-database-provider=sqlite
+# Values: sqlite, postgres, sqlserver, mysql
+database-provider=mysql
 
 # Specify the database connection to be used by the provider.
 # Sqlite example: Data Source=database.sqlite
 # MS SQL example: Server=.\\SQLEXPRESS;Database=ota;Trusted_Connection=True;
-database-connection=Data Source=database.sqlite
+# MariaDB example: Server=.\\SQLEXPRESS;Database=ota;Trusted_Connection=True;
+database-connection=Server=127.0.0.1;Port=3309;Database=tdsm;Uid=root;Pwd=a;
