--- a/Binaries/server.config
+++ b/Binaries/server.config
@@ -233,11 +233,11 @@ logs-to-keep=5
 #================================================================
 
 # Allows you to specify what database provider to use.
-# Values: sqlite, postgres, sqlserver, mysql
-database-provider=mysql
+# Values: sqlite, mssql, mysql, mariadb
+database-provider=sqlite
 
 # Specify the database connection to be used by the provider.
 # Sqlite example: Data Source=database.sqlite
-# MS SQL example: Server=.\\SQLEXPRESS;Database=ota;Trusted_Connection=True;
-# MariaDB example: Server=.\\SQLEXPRESS;Database=ota;Trusted_Connection=True;
-database-connection=Server=127.0.0.1;Port=3309;Database=tdsm;Uid=root;Pwd=a;
+# MS SQL example: Server=.\SQLEXPRESS;Database=ota;Trusted_Connection=True;
+# MariaDB/MySQL example: Server=Server=127.0.0.1;Port=3309;Database=tdsm;Uid=root;Pwd=a;
+database-connection=Data Source=database.sqlite
