--- a/WebInterface/WebInterface.csproj
+++ b/WebInterface/WebInterface.csproj
@@ -6,7 +6,7 @@
     <ProjectGuid>{088DB004-BC33-4FC6-B7F5-43C157D55AF9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>TDSM.Web</RootNamespace>
-    <AssemblyName>tdsm-web</AssemblyName>
+    <AssemblyName>TDSM.Web</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
