--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -172,6 +172,7 @@
     <Reference Include="System.Collections.Concurrent" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Command\Commands\ChangePasswordCommand.cs" />
     <Compile Include="Core\Command\Commands\PrivateMessageCommand.cs" />
     <Compile Include="Data\Models\Migrations\CreateAndSeed\LoadoutItemMigration.cs" />
     <Compile Include="Data\Models\Migrations\CreateAndSeed\DbPlayerMigration.cs" />
