Fixed for LoadoutItems, Core SSC HookPoints
Also added default-player-group to config

--- a/Binaries/server.config
+++ b/Binaries/server.config
@@ -106,6 +106,9 @@ heartbeat=true
 # [true|false] Default: true
 cheat-detection=true
 
+# Specifies the default group a player is added to when they are registered.
+default-player-group=Player
+
 # ============================================
 #                REST API
 # ============================================
