--- a/TDSM-Patcher/additional.config
+++ b/TDSM-Patcher/additional.config
@@ -37,6 +37,9 @@ cheat-detection=true
 # Specifies the default group a player is added to when they are registered.
 default-player-group=Player
 
+#Exit access level. Presently 4 is the only recommended value.
+exit-access-level=4
+
 # ============================================
 #                REST API
 # ============================================
@@ -58,8 +61,7 @@ default-player-group=Player
 #	NONE	= No server side characters
 #	AUTH	= Player data is based upon player name and password
 #	UUID	= Use the player UUID - Not recommended as a player may change this
-server-side-characters=AUTH
-#server-side-characters=NONE
+server-side-characters=NONE
 
 # This allows guests to connect with their normal gear.
 # Upon authentication the server will issue them with their registered data, overwriting anything extra they may have brought along.
