--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -108,6 +108,14 @@
       <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="OTA, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Open-Terraria-API\API\bin\Server-Debug\OTA.dll</HintPath>
+    </Reference>
+    <Reference Include="OTA.Commands, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Open-Terraria-API\OTA.Commands\bin\Server-Debug\OTA.Commands.dll</HintPath>
+    </Reference>
     <Reference Include="Remotion.Linq, Version=2.0.0.0, Culture=neutral, PublicKeyToken=fee00910d6e5f53b, processorArchitecture=MSIL">
       <HintPath>..\packages\Remotion.Linq.2.0.2\lib\net45\Remotion.Linq.dll</HintPath>
       <Private>True</Private>
@@ -169,8 +177,9 @@
     </Reference>
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Collections.Concurrent" />
-    <Reference Include="TerrariaServer">
-      <HintPath>..\Open-Terraria-API\Binaries\Server\TerrariaServer.exe</HintPath>
+    <Reference Include="TerrariaServer, Version=0.0.7.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Binaries\TerrariaServer.exe</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -331,13 +340,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <EmbeddedResource Include="Definitions\item.xml" />
-    <EmbeddedResource Include="Definitions\npc.xml">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="app.config" />
+    <EmbeddedResource Include="Definitions\item.json" />
+    <EmbeddedResource Include="Definitions\npc.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -348,10 +353,6 @@
     <ProjectReference Include="..\Open-Terraria-API\API\API.csproj">
       <Project>{a1f792b2-5d80-4de4-b5db-7a05dbeabd60}</Project>
       <Name>API</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Open-Terraria-API\OTA.Commands\OTA.Commands.csproj">
-      <Project>{1f4bfcfd-fa1f-4e47-b44e-91e18ec785ac}</Project>
-      <Name>OTA.Commands</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
