--- a/Binaries/server.config
+++ b/Binaries/server.config
@@ -241,11 +241,11 @@ logs-to-keep=5
 
 # Allows you to specify what database provider to use.
 # Values: sqlite, postgres, mssql, mysql, mariadb
-database-provider=sqlite
+database-provider=postgres
 
 # Specify the database connection to be used by the provider.
 # Sqlite example: Data Source=database.sqlite
 # MS SQL example: Server=.\SQLEXPRESS;Database=ota;Trusted_Connection=True;
 # MariaDB/MySQL example: Server=Server=127.0.0.1;Port=3309;Database=tdsm;Uid=root;Pwd=a;
 # Postgres example: Server=127.0.0.1;Port=5432;Database=tdsm;User Id=postgres;Password=a;
-database-connection=Data Source=database.sqlite
+database-connection=Server=127.0.0.1;Port=5432;Database=tdsm;User Id=postgres;Password=a;
